<resources>
    <string name="app_name">AXIS 2016</string>
    <string name="V">VISVESVARAYA NATIONAL</string>
    <string name="NIT">INSTITUTE OF TECHNOLOGY</string>
    <string name="N">NAGPUR</string>
    <string name="title_activity_first">First</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="team">Team</string>
    <string name="events">Events</string>
    <string name="workshops">Workshops</string>
    <string name="attractions">Attractions</string>
    <string name="sponsors">Sponsors</string>
    <string name="presented">Presented By:</string>
    <string name="action_settings">Settings</string>
    <string name="eve_det">Event Details</string>
    <string name="eve_man">Event Managers</string>
    <string name="registration">REGISTRATION</string>
    <string name="regFORM">Registration Form</string>
    <string name="gl">Guest Lecture</string>
    <string name="cua">Call Us At:</string>
    <string name="jp">J.P. JOGA</string>
    <string name="jpnum">+91-7767061700</string>
    <string name="md">MIHIKA</string>
    <string name="mdnum">+91-7875352622</string>
    <string name="conmail">info@axisvnit.org</string>
    <string name="address">
        Student\'s Activity Centre, VNIT, Nagpur, 440010
    </string>
    <string name="AnR">AUTOMATION &amp; ROBOTICS</string>
    <string name="SE">SCHOOL EVENTS</string>
    <string name="SnE">SOFTWARE &amp; ELECTRONICS</string>
    <string name="CnD">CONSTRUCTION &amp; DESIGN</string>
    <string name="MnO">MANAGEMENT &amp; OTHER</string>
    <string name="AiM">AXIS IGNITING MINDS</string>
    <string name="NE">NEW EVENTS</string>
    <string name="crepido">CREPIDO</string>
    <string name="devise">DEVISE</string>
    <string name="aquaskylark">AQUASKYLARK</string>
    <string name="turboflux">TURBOFLUX</string>
    <string name="paradeigma">PARADEIGMA</string>
    <string name="js">JUNIOR SCIENTIST</string>
    <string name="model">MODEL-O-THON</string>
    <string name="quiz">EXQUIZIT</string>
    <string name="cata">CATAPULTIKON</string>
    <string name="mun">MODEL UNITED NATIONS</string>
    <string name="matha">MATH-A-MAZE</string>
    <string name="dexter">DEXTER</string>
    <string name="robo">ROBOWARS</string>
    <string name="aquahunt">AQUAHUNT</string>
    <string name="mecha">MECHATRYST</string>
    <string name="autobot">AUTOBOT</string>
    <string name="manrob">MANUAL ROBOTICS</string>
    <string name="brainstorm">BRAINSTORM</string>
    <string name="laser">LASER LITT</string>
    <string name="circuitrix">ELECTROBLITZ</string>
    <string name="coll">COLL-IN-COLL</string>
    <string name="kart">KARTAVYA</string>
    <string name="techno">TECHNO.DOCX</string>
    <string name="anim">ANIMAZIONE</string>
    <string name="inso">INSOMNIA</string>
    <string name="poster">POSTEROLIC</string>
    <string name="crypto">CRYPTOCRUX</string>
    <string name="freako">FREAK-O-MATIX</string>
    <string name="baker">221B BAKER STREET</string>
    <string name="boss">WHO\'S THE BOSS</string>
    <string name="wall">WALLSTREET</string>
    <string name="informals">INFORMALS</string>
    <string name="sutra">GAMESUTRA</string>
    <string name="andro">ANDROID APP DEVELOPMENT</string>
    <string name="selfbal">SELF BALANCING ROBOT</string>
    <string name="mobile">MOBILE BUILDING</string>
    <string name="orni">ORNITHOCOPTER</string>
    <string name="akshay">AKSHAY</string>
    <string name="aknum">+91-7709171521 </string>
    <string name="twinkle">TWINKLE</string>
    <string name="twnum">+91-9168068387 </string>
    <string name="pranav">PRANAV</string>
    <string name="prnum">+91-7743865458 </string>
    <string name="savio1">MONAL</string>
    <string name="savio1num">+91-7378880223</string>
    <string name="savio2">RAMAKRISHNA</string>
    <string name="savio2num">+91-7767049749</string>
    <string name="savio3">SAURAV</string>
    <string name="savio3num">+91-7798473600</string>
    <string name="para1">M.A.AZEEM</string>
    <string name="para1num">+91-7798424632 </string>
    <string name="para2">ALEKHYA KONDA</string>
    <string name="para2num">+91-7757897483 </string>
    <string name="turbo1">NAVEEN</string>
    <string name="turbo1num">+91-9960775694</string>
    <string name="turbo2">VAMSI</string>
    <string name="turbo2num">+91-7798425956</string>
    <string name="turbo3">SARITA</string>
    <string name="turbo3num">+91-9049555923</string>
    <string name="devise1">JAMILA</string>
    <string name="devise1num">+91-8149781429</string>
    <string name="devise2">PANKAJ</string>
    <string name="devise2num">+91-9975045875</string>
    <string name="devise3">SAUDAMINI</string>
    <string name="devise3num">+91-7387235906</string>
    <string name="devise4">SHUBHAM</string>
    <string name="devise4num">+91-7038979557</string>
    <string name="sky1">GANESH</string>
    <string name="sky1num">+91-9545861904</string>
    <string name="sky2">SUMA</string>
    <string name="sky2num">+91-9049530821</string>
    <string name="sky3">PRASAD</string>
    <string name="sky3num">+91-9773092040</string>
    <string name="robo1">ADITYA</string>
    <string name="robo1num">+91-9561299129</string>
    <string name="robo2">JAYESH</string>
    <string name="robo2num">+91-8390529435</string>
    <string name="robo3">RAVI</string>
    <string name="robo3num">+91-7387461573</string>
    <string name="robo4">YOGESH</string>
    <string name="robo4num">+91-8108000272</string>
    <string name="auto1">PRAVIN</string>
    <string name="auto1num">+91-9922795270 </string>
    <string name="auto2">REGINOLD</string>
    <string name="auto2num">+91-7276138957 </string>
    <string name="aqua1">AKSHAYAN</string>
    <string name="aqua1num">+91-8793269927</string>
    <string name="aqua2">AMAN</string>
    <string name="aqua2num">+91-9404115260 </string>
    <string name="aqua3">ANSHUL</string>
    <string name="aqua3num">+91-8408926596 </string>
    <string name="mecha1">NACHIKET</string>
    <string name="mecha1num">+91-9168919857</string>
    <string name="mecha2">ANCHAL</string>
    <string name="mecha2num">+91-9869482766</string>
    <string name="mecha3">TUSHAR</string>
    <string name="mecha3num">+91-9405841135</string>
    <string name="anim1">DINESH</string>
    <string name="anim1num">+91-9130613719</string>
    <string name="anim2">PRAGNA</string>
    <string name="anim2num">+91-9494872571 </string>
    <string name="anim3">MANISH</string>
    <string name="anim3num">+91-7028611996</string>
    <string name="crypto1">HARDIK</string>
    <string name="crypto1num">+91-9769328402</string>
    <string name="crypto2">NEHA</string>
    <string name="crypto2num">+91-7720084887</string>
    <string name="inso1">SHAH</string>
    <string name="insoo1num">+91-7720956323 </string>
    <string name="insoo2">SAXENA</string>
    <string name="insoo2num">+91-7038243074</string>
    <string name="coll1">MAYUR</string>
    <string name="coll1num">+91-8055155345</string>
    <string name="coll2">SIDDHARTHA</string>
    <string name="coll2num">+91-7767049792</string>
    <string name="coll3">SANKET</string>
    <string name="coll3num">+91-7387311052</string>
    <string name="coll4">SOWMYA</string>
    <string name="coll4num">+91-9049568241</string>
    <string name="kart1">MAHESH</string>
    <string name="kart1num">+91-7350042360 </string>
    <string name="kart2">SIVAMOUNI</string>
    <string name="kart2num">+91-7757835722 </string>
    <string name="kart3">SUMAJA</string>
    <string name="kart3num">+91-9049458462 </string>
    <string name="techno1">HIMANSHU</string>
    <string name="techno1num">+91-8879017759</string>
    <string name="techno2">MANGESH</string>
    <string name="techno2num">+91-9689203459</string>
    <string name="techno3">SHUBHAM</string>
    <string name="techno3num">+91-9527092298</string>
    <string name="electro1">SANKET</string>
    <string name="electro1num">+91-9028694342</string>
    <string name="electro2">SWAPNIL</string>
    <string name="electro2num">+91-9765191060</string>
    <string name="js1">KUMAR</string>
    <string name="js1num">+91-7507666333</string>
    <string name="js2">PRANIT</string>
    <string name="js2num">+91-9503244225</string>
    <string name="js3">SHRUTIKA</string>
    <string name="js3num">+91-8975251146</string>
    <string name="baker1">PRANAV</string>
    <string name="baker1num">+91-7028813496</string>
    <string name="baker2">SHREYAS</string>
    <string name="baker2num">+91-8007150268</string>
    <string name="sutra1">GAURAV</string>
    <string name="sutra1num">+91-7718851462</string>
    <string name="sutra2">RAVI</string>
    <string name="sutra2num">+91-8446180164</string>
    <string name="sutra3">SHOBHIT</string>
    <string name="sutra3num">+91-9923519736</string>
    <string name="sutra4">YASH</string>
    <string name="sutra4num">+91-8446180164</string>
    <string name="wall1">ASHISH</string>
    <string name="wall1num">+91-9130621649</string>
    <string name="wall2">KULDEEP</string>
    <string name="wall2num">+91-9130871289</string>
    <string name="wall3">SANKET</string>
    <string name="wall3num">+91-7083754861</string>
    <string name="wall4">RACHANA</string>
    <string name="wall4num">+91-9130866782</string>
    <string name="infor1">HARSHA</string>
    <string name="infor1num">+91-9049544329</string>
    <string name="infor2">KRISHNA</string>
    <string name="infor2num">+91-9403293620</string>
    <string name="infor3">RISHI</string>
    <string name="infor3num">+91-9160458966</string>
    <string name="infor4">SRIPATHI</string>
    <string name="infor4num">+91-8019266082 </string>
    <string name="freako1">BHARGAV</string>
    <string name="freako1num">+91-7057254162</string>
    <string name="freako2">SUDEEPTHI</string>
    <string name="freako2num">+91-9049532362</string>
    <string name="boss1">ADITI</string>
    <string name="boss1num">+91-9038268973</string>
    <string name="boss2">MEGHA</string>
    <string name="boss2num">+91-7756828950</string>
    <string name="boss3">NANDISH</string>
    <string name="boss3num">+91-9869955210</string>
    <string name="brain1">RUCHA</string>
    <string name="brain1num">+91-9168076894</string>
    <string name="brain2">SREELAKSHMI</string>
    <string name="brain2num">+91-7387246402</string>
    <string name="laser1">APURVA</string>
    <string name="laser1num">+91-9764260152</string>
    <string name="laser2">SANCHIT</string>
    <string name="laser2num">+91-9689990341</string>
    <string name="dex1">APURVA</string>
    <string name="dex1num">+91-9423687167</string>
    <string name="dex2">DHIRAJ</string>
    <string name="dex2num">+91-7038471821 </string>
    <string name="dex3">SHRUTI</string>
    <string name="dex3num">+91-7028441779 </string>
    <string name="dex4">HARI</string>
    <string name="dex4num">+91-9769142883 </string>
    <string name="dex5">OMKAR</string>
    <string name="dex5num">+91-8698460467 </string>
    <string name="dex6">PUSHKAR</string>
    <string name="dex6num">+91-7743932965</string>
    <string name="apj">Honorable Ex-President of India Dr. APJ Kalam inaugurating Axis-14 at VNIT Nagpur</string>
    <string name="profinc">PROFESSOR IN-CHARGES</string>
    <string name="tresi">TREASURER</string>
    <string name="core">CORE COORDINATORS</string>
    <string name="core1">AMIT TAPAS</string>
    <string name="core2">ANOUSHKA BANAVAR</string>
    <string name="core3">HARSHAL PATIL</string>
    <string name="core4">HEMANSHU CHAMATE</string>
    <string name="core5">JP JOGA</string>
    <string name="core6">VIVEK DESHPANDE</string>
    <string name="core7">SUMEDH KANADE</string>
    <string name="baker_det">
        Experience the most thrilling, innovative and challenging quiz contest you have ever
        encountered. You will be sent to every corner of the web to cut through the veil of mystery.
        Take a gander down 221B Baker Street.
    </string>
</resources>